# SciConsist

./: .gitignore  MCP_SETUP.ja-JP.md  README.md  README.zh-CN.md  wget-log
.claude-plugin/: marketplace.json
plan/: data-pipeline-progress.md  (+11 more)
sciconsist_pilot/: .gitignore  README.md  pyproject.toml
sciconsist_pilot/run/conf/: pilot.yaml
sciconsist_pilot/scripts/: analyze_verifiability.py  auto_real_pipeline.py  build_fixed_val_ids.py  cache_real_feh_features.py  compare_vsr_text_vs_feh_cached.py  download_background.py  download_scimdr_images.sh  download_trainable_data.py  eval_policy_p123.py  extract_s1_features_safe.py  parse_latex_tables.py  prepare_data.py  prepare_grpo_subset.py  prepare_scimdr_sft.py  resume_stage2_b_c2boost_stable.sh  run_gpt4o_judge.py  run_meta_evaluation.py  run_pilot.py  run_stage1_sft.sh  run_stage2_b_c2boost_compare.sh  run_stage2_b_softgrid_r3.sh  run_stage2_mid_grid_stable.sh  run_stage2_softb_baseline_next.sh  sample_claims_meta_eval.py  stream_s1_index.py  test_vsr_real.py  train_feh.py  train_stage1_sft.py  train_stage1_sft_grpo.py  train_stage2_policy_grpo.py  train_vsr_grpo.py  wait_and_extract_safe.py
sciconsist_pilot/src/data/: __init__.py  dataset.py  perturbation.py  prepare.py
sciconsist_pilot/src/evaluate/: __init__.py  metrics.py
sciconsist_pilot/src/features/: __init__.py  extract.py
sciconsist_pilot/src/models/: __init__.py  feh.py
sciconsist_pilot/src/vsr/: __init__.py  baselines.py  claim_extractor.py  learned.py  reward.py  router.py  semi_symbolic.py  symbolic.py  table_index.py  table_parser.py  types.py
(+2 files in other folders)
